Fix style scrollbar firefox

--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@
   box-sizing: border-box;
   transition: all 0.3s ease;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-left: 264px;
 }
 
